# reimu

./: Cargo.toml  README.md
.github/workflows/: default.yml  docs.yml
docs/: crates.js  help.html  reimu_redirect.html  search-index.js  settings.html  source-files.js
docs/ab_glyph/: all.html  enum.GlyphImageFormat.html  enum.OutlineCurve.html  fn.point.html  index.html  struct.CodepointIdIter.html  struct.FontArc.html  struct.FontRef.html  struct.FontVec.html  struct.Glyph.html  struct.GlyphId.html  struct.GlyphImage.html  struct.InvalidFont.html  struct.Outline.html  struct.OutlinedGlyph.html  struct.PxScale.html  struct.PxScaleFactor.html  struct.PxScaleFont.html  struct.Rect.html  trait.Font.html  trait.ScaleFont.html  type.Point.html
docs/ab_glyph_rasterizer/: all.html  fn.point.html  index.html  struct.Point.html  struct.Rasterizer.html
docs/anyhow/: index.html  struct.Error.html
docs/atomic_refcell/: all.html  index.html  struct.AtomicRef.html  struct.AtomicRefCell.html  struct.AtomicRefMut.html  struct.BorrowError.html  struct.BorrowMutError.html
docs/clap/: enum.ColorChoice.html  index.html  macro.value_parser.html  struct.Arg.html  struct.ArgGroup.html  struct.Command.html  struct.Id.html  trait.ValueEnum.html
docs/clap_derive/: index.html
docs/clap_lex/: index.html  struct.RawOsStr.html  struct.RawOsString.html
docs/egui/: all.html  constant.NUM_POINTER_BUTTONS.html  enum.Align.html  enum.CursorIcon.html  enum.Direction.html  enum.Event.html  enum.FontFamily.html  enum.Key.html  enum.PointerButton.html  (+58 more)
src/: cpu.rs  gpu.rs  main.rs  util.rs
(+8745 files in other folders)
