[package]
name = "reimu"
version = "0.1.0"
authors = ["Adam Hellberg <sharparam@sharparam.com>"]
edition = "2021"
description = "CHIP-8 emulator in Rust"
homepage = "https://github.com/Sharparam/reimu"
repository = "https://github.com/Sharparam/reimu"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.30", features = ["derive"] }
egui_sdl2_gl = "0.16.0"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sdl2 = "0.35.2"
